# HyperEdit

./: .env.example  .gitignore  README-FRONTEND-INTEGRATION.md  README.md  chatbot.py  demo_video_agent.py  demo_video_agent_processor.py  pyproject.toml  run-video-editor.sh  test_api_connection.py  test_hyperbolic_connection.py  test_ssh.py  test_video_editing.py  tooldescriptions.py
api/: main.py
backend/: config.py  main.py
backend/Project-Jarvis/: .env.example  .gitignore  chatbot.py  test_file.txt
backend/Project-Jarvis/llm_inference_verifier/: docker-compose.yml  package.json
backend/Project-Jarvis/video_agent/: agent_tools.py  scene_processor.py  video_toolkit.py
demos/: demo_hyperbolic_video_agent.py  demo_video_agent_processor.py  test_hyperbolic_connection.py
frontend/: config.ts  next.config.js  package.json  v0-user-next.config.js
frontend/app/: globals.css  page.tsx
frontend/components/: clip-list.tsx  file-upload.tsx  loading-animation.tsx  video-editor.tsx  video-preview.tsx
hyperbolic_agentkit_core/actions/: remote_shell.py  rent_compute.py  ssh_manager.py
llm_inference_verifier/: .gitignore  CreateOperator.sh  README.md  runCreateOperator.js
llm_inference_verifier/Execution_Service/src/: llm.service.js  (+1 more)
tests/: test_focused_file_transfer.py  test_video_agent.py  test_video_agent_processor.py
video_agent/: __init__.py  agent_tools.py  example.py  example_usage.py  file_transfer.py  local_scene_processor.py  video_agent_processor.py  video_knowledge_base.py  video_models.py  video_processor.py  video_toolkit.py  video_tools.py
(+14 files in other folders)
